# manjaro-arm-installer-cli

./: .clang-format  CMakeLists.txt  README.MD  format-code.sh
src/: main.cpp  mainwindow.h  manjaro-arm-installer.pro
